src/glx/dri2_glx.c
@@ -138,6 +138,7 @@ dri2_bind_context(struct glx_context *context, struct glx_context *old,
    struct dri2_context *pcp = (struct dri2_context *) context;
    struct dri2_screen *psc = (struct dri2_screen *) pcp->base.psc;
    struct dri2_drawable *pdraw, *pread;
+   struct dri2_display *pdp;
 
    pdraw = (struct dri2_drawable *) driFetchDrawable(context, draw);
    pread = (struct dri2_drawable *) driFetchDrawable(context, read);
@@ -145,11 +146,21 @@ dri2_bind_context(struct glx_context *context, struct glx_context *old,
    if (pdraw == NULL || pread == NULL)
       return GLXBadDrawable;
 
-   if ((*psc->core->bindContext) (pcp->driContext,
-				  pdraw->driDrawable, pread->driDrawable))
-      return Success;
+   if (!(*psc->core->bindContext) (pcp->driContext,
+				   pdraw->driDrawable, pread->driDrawable))
+      return GLXBadContext;
 
-   return GLXBadContext;
+   /* If the server doesn't send invalidate events, we may miss a
+    * resize before the rendering starts.  Invalidate the buffers now
+    * so the driver will recheck before rendering starts. */
+   pdp = (struct dri2_display *) psc->base.display;
+   if (!pdp->invalidateAvailable) {
+      dri2InvalidateBuffers(psc->base.dpy, pdraw->base.xDrawable);
+      if (pread != pdraw)
+	 dri2InvalidateBuffers(psc->base.dpy, pread->base.xDrawable);
+   }
+
+   return Success;
 }
 
 static void
